--- a/GameData/Mekhlin/Corvus/Corvus.cfg
+++ b/GameData/Mekhlin/Corvus/Corvus.cfg
@@ -24,17 +24,36 @@
 			description = A planet
             isHomeWorld = false
 			timewarpAltitudeLimits = 0 1238 2475 4950 9900 19800 39600 79200
-			ScienceValues
-			{
-				landedDataValue = 6.5
-				splashedDataValue = 1
-				flyingLowDataValue = 1
-				flyingHighDataValue = 1
-				inSpaceLowDataValue = 9
-				inSpaceHighDataValue = 8
-				recoveryValue = 8
-				spaceAltitudeThreshold =  216000
-			}
+            
+            biomeMap = Mekhlin/Corvus/PluginData/Corvus_biome.dds
+            Biomes
+            {
+                Biome
+                {
+                    name = Mares
+                    value = 1.0
+                    color = #ffffff
+                }
+                Biome
+                {
+                    name = Dunes
+                    value = 1.0
+                    color = #000000
+                }
+            }
+
+            ScienceValues
+            {
+                landedDataValue = 8
+                splashedDataValue = 1
+                flyingLowDataValue = 5
+                flyingHighDataValue = 5
+                inSpaceLowDataValue = 7
+                inSpaceHighDataValue = 5
+                recoveryValue = 5
+                flyingAltitudeThreshold = 12000
+                spaceAltitudeThreshold = 140000
+            }
 		}
         Orbit
         {
