--- a/GameData/Mekhlin/Corvus/Corvus.cfg
+++ b/GameData/Mekhlin/Corvus/Corvus.cfg
@@ -1,6 +1,6 @@
 @Kopernicus:FOR[Corvus]
 {
-	Body
+    Body
     {
         name = Corvus
 
@@ -10,20 +10,23 @@
 			update = true
 		}
 		cacheFile = Mekhlin/Cache/Corvus.bin
-		Template
+        Template
         {
             name = Moho
-			removePQSMods = FlattenOcean, VertexSimplexNoiseColor, HeightColorMap
+			//removePQSMods = FlattenOcean, VertexSimplexNoiseColor, HeightColorMap
+			removePQSMods = VertexSimplexNoiseColor, HeightColorMap
         }
         Properties
         {
 			displayName = Corvus
-			radius = 300000
-			geeASL = 0.195
-			tidallyLocked = True
-			description = A planet
+            radius = 300000
+            geeASL = 0.05
+            rotates = true
+			rotationPeriod = 106309.606989054
+			tidallyLocked = false
+		    description = A planet
             isHomeWorld = false
-			timewarpAltitudeLimits = 0 1238 2475 4950 9900 19800 39600 79200
+			timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
             
             biomeMap = Mekhlin/Corvus/PluginData/Corvus_biome.dds
             Biomes
@@ -41,36 +44,36 @@
                     color = #000000
                 }
             }
-
-            ScienceValues
-            {
-                landedDataValue = 8
-                splashedDataValue = 1
-                flyingLowDataValue = 5
-                flyingHighDataValue = 5
-                inSpaceLowDataValue = 7
-                inSpaceHighDataValue = 5
-                recoveryValue = 5
-                flyingAltitudeThreshold = 12000
-                spaceAltitudeThreshold = 140000
-            }
+            
+			ScienceValues
+			{
+				landedDataValue = 11.5
+				splashedDataValue = 1
+				flyingLowDataValue = 1
+				flyingHighDataValue = 1
+				inSpaceLowDataValue = 12
+				inSpaceHighDataValue = 10
+				recoveryValue = 11
+				spaceAltitudeThreshold = 118000
+			}
 		}
         Orbit
         {
             referenceBody = Sun
-            inclination = -5.2
+            inclination = -1.1
             eccentricity = 0
-            semiMajorAxis = 7259213547
+            semiMajorAxis = 52300000000
             longitudeOfAscendingNode = 0
             argumentOfPeriapsis = 0
-            meanAnomalyAtEpoch = 0
+            meanAnomalyAtEpoch = 3.14000010490417
+			meanAnomalyAtEpochD = 179.908753681645
             epoch = 0
             color = #cd853f
         }
 		ScaledVersion
         {
-			fadeStart = 135000
-			fadeEnd = 270000
+            fadeStart = 95000
+            fadeEnd = 97000
             Material
             {	
                 texture = Mekhlin/Corvus/PluginData/Corvus_color.dds
@@ -79,29 +82,30 @@
         }
 		PQS
         {
+			fadeStart = 94500
+			fadeEnd = 189000
+			deactivateAltitude = 189945
 			minLevel = 2
 			maxLevel = 8
 			minDetailDistance = 6
 			maxQuadLengthsPerFrame = 0.03
-			fadeStart = 270000
-			fadeEnd = 540000
-			deactivateAltitude = 542700
 			allowFootprints = True
+            
 			Material
 			{
 				saturation = 1
-				contrast = 1.35
+				contrast = 1.3
 				tintColor = 1,1,1,0
 				groundTexStart = 0
-				groundTexEnd = 10000
+				groundTexEnd = 9000
 				steepTexStart = 0
-				steepTexEnd = 10000
-				steepTex = CTTP/Textures/PluginData/cliff.dds
-				steepBumpMap = CTTP/Textures/PluginData/cliff_normal.dds
+				steepTexEnd = 9000				
+				steepTex = CTTP/Textures/PluginData/sand.dds
+				steepBumpMap = CTTP/Textures/PluginData/sand_normal.dds
 				steepNearTiling = 2500
 				steepTiling = 25
-				lowTex = CTTP/Textures/PluginData/rock.dds
-				lowBumpMap = CTTP/Textures/PluginData/rock_normal.dds
+				lowTex = CTTP/Textures/PluginData/sand.dds
+				lowBumpMap = CTTP/Textures/PluginData/sand_normal.dds
 				lowNearTiling = 5000
 				lowMultiFactor = 50
 				lowBumpNearTiling = 5000
@@ -112,123 +116,122 @@
 				midMultiFactor = 50
 				midBumpNearTiling = 5000
 				midBumpFarTiling = 50
-				highTex = CTTP/Textures/PluginData/sand.dds
-				highBumpMap = CTTP/Textures/PluginData/sand_normal.dds
+				highTex = CTTP/Textures/PluginData/cliff.dds
+				highBumpMap = CTTP/Textures/PluginData/cliff_normal.dds
 				highNearTiling = 5000
 				highMultiFactor = 50
 				highBumpNearTiling = 5000
-				highBumpFarTiling = 50		
+				highBumpFarTiling = 50							
 				lowStart = 0
-				lowEnd = 0.25
-				highStart = 0.35
+				lowEnd = 0.5
+				highStart = 0.8
 				highEnd = 1
 			}
             Mods
-            {
+            {	
 				VertexHeightMap
-                {
-                    map = Mekhlin/Corvus/PluginData/Corvus_height.dds
-                    offset = 0
-                    deformity = 70
-                    scaleDeformityByRadius = False
-                    order = 10
-                    enabled = True
-                }
-                VertexSimplexHeightAbsolute
-                {
-                    seed = 11182391
-                    deformity = 100
-                    octaves = 8
-                    persistence = 0.5
-                    frequency = 24
-                    enabled = true
-                    order = 20
-                }				
-                VertexSimplexHeight
-                {
-                    seed = 2488903
-                    deformity = 100
-                    octaves = 8
-                    persistence = 0.5
-                    frequency = 4
-                    enabled = true
-                    order = 30
-                }		
-                VertexHeightNoiseVertHeightCurve2
-                {
-                    deformity = 100
-                    ridgedAddFrequency = 32
-                    ridgedAddLacunarity = 2
-                    ridgedAddOctaves = 8
-                    ridgedAddSeed = 645434
-                    ridgedMode = Low
-                    ridgedSubFrequency = 32
-                    ridgedSubLacunarity = 2
-                    ridgedSubOctaves = 8
-                    ridgedSubSeed = 934272371
-                    simplexFrequency = 24
-                    simplexHeightEnd = 3500
-                    simplexHeightStart = 0
-                    simplexOctaves = 8
-                    simplexPersistence = 0.5
-                    simplexSeed = 56432343
-                    order = 40
-                    enabled = True
-                    simplexCurve
-                    {
-                        key = 0 0 0 0
-                        key = 0.6311918 0.4490898 1.432598 1.432598
-                        key = 1 1 0 0
-                    }
-                }
+				{
+					map = Mekhlin/Corvus/PluginData/Corvus_height.dds
+					offset = 0
+					deformity = 2000
+					scaleDeformityByRadius = False
+					order = 10
+					enabled = True
+				}
+				VertexSimplexHeightAbsolute
+				{
+					seed = 11182391
+					deformity = 800
+					octaves = 8
+					persistence = 0.5
+					frequency = 24
+					enabled = true
+					order = 20
+				}				
+				VertexSimplexHeight
+				{
+					seed = 2488903
+					deformity = 800
+					octaves = 8
+					persistence = 0.5
+					frequency = 4
+					enabled = true
+					order = 30
+				}		
+				VertexHeightNoiseVertHeightCurve2
+				{
+					deformity = 600
+					ridgedAddFrequency = 32
+					ridgedAddLacunarity = 2
+					ridgedAddOctaves = 8
+					ridgedAddSeed = 645434
+					ridgedMode = Low
+					ridgedSubFrequency = 32
+					ridgedSubLacunarity = 2
+					ridgedSubOctaves = 8
+					ridgedSubSeed = 934272371
+					simplexFrequency = 24
+					simplexHeightEnd = 3500
+					simplexHeightStart = 0
+					simplexOctaves = 8
+					simplexPersistence = 0.5
+					simplexSeed = 56432343
+					order = 40
+					enabled = True
+					simplexCurve
+					{
+						key = 0 0 0 0
+						key = 0.6311918 0.4490898 1.432598 1.432598
+						key = 1 1 0 0
+					}
+				}
 				VoronoiCraters
-                {
-                    simplexSeed = 123123
-                    simplexOctaves = 3
-                    simplexPersistence = 0.5
-                    simplexFrequency = 120
-                    deformation = 500
-                    voronoiSeed = 824
-                    voronoiDisplacement = 0
-                    voronoiFrequency = 10
-                    CraterCurve
-                    {
-                        key = -0.9982381 -0.7411783 -0.06500059 -0.06500059
-                        key = -0.9332262 -0.7678316 -0.2176399 -0.2176399
-                        key = -0.8990405 -0.7433339 -2.560626 -2.560626
-                        key = -0.7445966 -0.8581167 0.4436148 0.4436148
-                        key = -0.4499771 -0.1392395 5.289535 5.289535
-                        key = -0.4015177 0.2551735 9.069458 -2.149609
-                        key = -0.2297457 0.002857953 -0.4453675 -0.4453675
-                        key = 0.2724952 0.00423781 -0.01884932 -0.01884932
-                        key = 0.9998434 -0.004090764 0.01397126 0.01397126
-                    }
-                    
-                    jitter = 0.1
-                    jitterHeight = 3
-                    JitterCurve
-                    {
-                        key = -1.000701 0.4278412 0.1577609 0.1577609
-                        key = -0.7884969 0.09487452 -0.7739663 -0.7739663
-                        key = -0.6091803 0.072019 0.123537 0.123537
-                        key = -0.3930514 0.3903495 3.300831 3.300831
-                        key = -0.3584836 0.8643304 0.07139917 0.07139917
-                        key = -0.2988068 0.002564805 -0.01814346 -0.01814346
-                        key = 0.9970253 0.003401639 0 0
-                    }
-                    rFactor = 1
-                    rOffset = 1
-                    colorOpacity = 0.7
-                    DebugColorMapping = False
-                    enabled = True
-                    order = 50
-                }
-                VertexColorMap
-                {
-                    map = Mekhlin/Corvus/PluginData/Corvus_color.dds
-                    order = 60
-                    enabled = True
-                }
+				{
+					colorOpacity = 0.7
+					DebugColorMapping = False
+					deformation = 250
+					jitter = 0.1
+					jitterHeight = 3
+					rFactor = 1
+					rOffset = 1
+					simplexFrequency = 120
+					simplexOctaves = 3
+					simplexPersistence = 0.5
+					simplexSeed = 3412312
+					voronoiDisplacement = 0
+					voronoiFrequency = 25
+					voronoiSeed = 4353453
+					order = 50
+					enabled = True
+					CraterCurve
+					{
+						key = -0.9982381 -0.7411783 -0.06500059 -0.06500059
+						key = -0.9332262 -0.7678316 -0.2176399 -0.2176399
+						key = -0.8990405 -0.7433339 -2.560626 -2.560626
+						key = -0.7445966 -0.8581167 0.4436148 0.4436148
+						key = -0.4499771 -0.1392395 5.289535 5.289535
+						key = -0.4015177 0.2551735 9.069458 -2.149609
+						key = -0.2297457 0.002857953 -0.4453675 -0.4453675
+						key = 0.2724952 0.00423781 -0.01884932 -0.01884932
+						key = 0.9998434 -0.004090764 0.01397126 0.01397126
+					}
+					JitterCurve
+					{
+						key = -1.000701 0.4278412 0.1577609 0.1577609
+						key = -0.7884969 0.09487452 -0.7739663 -0.7739663
+						key = -0.6091803 0.072019 0.123537 0.123537
+						key = -0.3930514 0.3903495 3.300831 3.300831
+						key = -0.3584836 0.8643304 0.07139917 0.07139917
+						key = -0.2988068 0.002564805 -0.01814346 -0.01814346
+						key = 0.9970253 0.003401639 0 0
+					}
+				}
+				VertexColorMap
+				{
+					map = Mekhlin/Corvus/PluginData/Corvus_color.dds
+					order = 60
+					enabled = True
+				}
 				LandControl
 				{
 					altitudeBlend = 0
@@ -338,8 +341,8 @@
 							{
 								Scatter
 								{
-									density = 1.0
-									scatterName = rock_boulder
+									density = 0.8
+									scatterName = ice_boulder
 								}
 							}
 						}
@@ -355,24 +358,24 @@
 							maxCache = 512
 							maxCacheDelta = 32
 							maxLevelOffset = 0
-							maxScale = 3
+							maxScale = 1
 							maxScatter = 20
 							maxSpeed = 1000
-							minScale = 2
+							minScale = 0.5
 							recieveShadows = True
-							name = rock_boulder
-							seed = 354243141
+							name = ice_boulder
+							seed = 452746345
 							verticalOffset = 0
 							delete = False
 							collide = True
 							science = False
 							Material
 							{
-								color = RGBA(188, 169, 155, 255)
-								mainTex = CTTP/Textures/PluginData/cliff.dds
+								color = RGBA(154, 125, 94, 255)
+								mainTex = CTTP/Textures/PluginData/sand.dds
 								mainTexScale = 1,1
 								mainTexOffset = 0,0
-								bumpMap = CTTP/Textures/PluginData/cliff_normal.dds
+								bumpMap = CTTP/Textures/PluginData/sand_normal.dds
 								bumpMapScale = 1,1
 								bumpMapOffset = 0,0
 							}
@@ -384,5 +387,5 @@
 				}
             }
         }		
-    }
-}	
+    }	
+}
