--- a/GameData/Mekhlin/Corvus/Corvus.cfg
+++ b/GameData/Mekhlin/Corvus/Corvus.cfg
@@ -13,20 +13,19 @@
         Template
         {
             name = Moho
-			//removePQSMods = FlattenOcean, VertexSimplexNoiseColor, HeightColorMap
 			removePQSMods = VertexSimplexNoiseColor, HeightColorMap
         }
         Properties
         {
 			displayName = Corvus
             radius = 300000
-            geeASL = 0.05
+            geeASL = 0.28093937318655
             rotates = true
 			rotationPeriod = 106309.606989054
 			tidallyLocked = false
 		    description = A planet
             isHomeWorld = false
-			timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
+            timewarpAltitudeLimits = 0 10000 10000 30000 50000 100000 200000 300000
             
             biomeMap = Mekhlin/Corvus/PluginData/Corvus_biome.dds
             Biomes
