--- a/GameData/Mekhlin/Corvus/Corvus.cfg
+++ b/GameData/Mekhlin/Corvus/Corvus.cfg
@@ -25,7 +25,7 @@
 			tidallyLocked = false
 		    description = A planet
             isHomeWorld = false
-            timewarpAltitudeLimits = 0 10000 10000 30000 50000 100000 200000 300000
+            timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
             
             biomeMap = Mekhlin/Corvus/PluginData/Corvus_biome.dds
             Biomes
@@ -62,6 +62,7 @@
             inclination = -1.1
             eccentricity = 0
             semiMajorAxis = 52300000000
+            semiMajorAxis = 27338138138
             longitudeOfAscendingNode = 0
             argumentOfPeriapsis = 0
             meanAnomalyAtEpoch = 3.14000010490417
@@ -79,6 +80,89 @@
 		        normals = Mekhlin/Corvus/PluginData/Corvus_normal.dds
             }
         }
+        Atmosphere
+		{
+			enabled = True // Whether the body has an atmosphere.
+			oxygen = False // Whether the atmosphere contains oxygen.
+			staticDensityASL = 0.149935103789845 // Atmospherical density at sea level. Used to calculate the parameters of the atmosphere if no curves are used.
+			adiabaticIndex = 1.20000004768372
+			atmosphereDepth = 50000 // The height of the atmosphere.
+			gasMassLapseRate = 3.04406667000075
+			atmosphereMolarMass = 0.043
+			pressureCurveIsNormalized = False // Whether the pressure curve should use absolute (0 - atmosphereDepth) or relative (0 - 1) values.
+			staticPressureASL = 6.755 // The static pressure at sea level. Used to calculate the parameters of the atmosphere if no curves are used.
+			temperatureCurveIsNormalized = False // Whether the temperature curve should use absolute (0 - atmosphereDepth) or relative (0 - 1) values.
+			temperatureLapseRate = 0.005
+			temperatureSeaLevel = 250 // The static temperature at sea level. Used to calculate the parameters of the atmosphere if no curves are used.
+			ambientColor = 0.305882365,0.187128037,0.234762117,1 // All objects inside of the atmosphere will slightly shine in this color.
+			lightColor = 0.509465635,0.588402689,0.643137276,0
+			addAFG = True
+			pressureCurve // Assigns a pressure value to a height value inside of the atmosphere.
+			{
+				key = 0 6.755 0 -0.0007
+				key = 12000 1.276 -0.000223 -0.000223
+				key = 20000 0.241 -4.22E-05 -4.22E-05
+				key = 35000 0.015 -2.787075E-06 -2.787075E-06
+				key = 50000 0 0 0
+			}
+			temperatureCurve // Assigns a temperature value to a height value inside of the atmosphere.
+			{
+				key = 0 233 0 -0.0004261126
+				key = 1000 232.8 -0.000573325 -0.000573325
+				key = 25000 153.7 -0.001877083 -0.001877083
+				key = 30000 150 0 0
+				key = 45000 150 0 0
+				key = 50000 160 0.003746914 0
+			}
+			temperatureSunMultCurve
+			{
+				key = 0 1 0 0
+				key = 1000 1 0 0
+				key = 25000 0 0 0
+				key = 45000 0 0 0
+				key = 47350 0.4551345 0.0006885778 0.0006885778
+				key = 50000 1 0 0
+			}
+			temperatureLatitudeBiasCurve
+			{
+				key = 0 20 0 -0.0957164
+				key = 50 0 -0.950278 -0.950278
+				key = 70 -30 -1.955704 -1.955704
+				key = 90 -50 -0.02418368 0
+			}
+			temperatureLatitudeSunMultCurve
+			{
+				key = 0 18 0 0.06497125
+				key = 40 25 0 0
+				key = 65 20 -0.5202533 -0.5202533
+				key = 90 5 0 0
+			}
+			temperatureAxialSunBiasCurve
+			{
+				key = 0 0 0 0
+			}
+			temperatureAxialSunMultCurve
+			{
+				key = 0 0 0 0
+			}
+			temperatureEccentricityBiasCurve
+			{
+				key = 0 0 0 0
+			}
+			AtmosphereFromGround // The atmosphere effect that is seen on the horizon.
+			{
+				DEBUG_alwaysUpdateAll = False // Whether all parameters should get recalculated and reapplied every frame.
+				doScale = True // Whether the atmosphere mesh should be scaled automatically.
+				innerRadius = 319800 // The lower bound of the atmosphere effect.
+				invWaveLength = 14.8436403,8.34259987,5.84501028,0.5
+				outerRadius = 328000 // The upper bound of the atmosphere effect.
+				samples = 4
+				transformScale = 1.02499998,1.02499998,1.02499998 // The scale of the atmosphere mesh in all three directions. Automatically set if doScale is enabled.
+				waveLength = 0.509465635,0.588402689,0.643137276,0
+				outerRadiusMult = 1.025 // A multiplier that automatically sets outerRadius based on the planets radius.
+				innerRadiusMult = 0.975 // A multiplier that automatically sets innerRadius based on the planets radius.
+			}
+		}
 		PQS
         {
 			fadeStart = 94500
@@ -138,96 +222,55 @@
 					enabled = True
 				}
 				VertexSimplexHeightAbsolute
-				{
-					seed = 11182391
-					deformity = 800
-					octaves = 8
-					persistence = 0.5
-					frequency = 24
-					enabled = true
-					order = 20
-				}				
-				VertexSimplexHeight
-				{
-					seed = 2488903
-					deformity = 800
-					octaves = 8
-					persistence = 0.5
-					frequency = 4
-					enabled = true
-					order = 30
-				}		
-				VertexHeightNoiseVertHeightCurve2
-				{
-					deformity = 600
-					ridgedAddFrequency = 32
-					ridgedAddLacunarity = 2
-					ridgedAddOctaves = 8
-					ridgedAddSeed = 645434
-					ridgedMode = Low
-					ridgedSubFrequency = 32
-					ridgedSubLacunarity = 2
-					ridgedSubOctaves = 8
-					ridgedSubSeed = 934272371
-					simplexFrequency = 24
-					simplexHeightEnd = 3500
-					simplexHeightStart = 0
-					simplexOctaves = 8
-					simplexPersistence = 0.5
-					simplexSeed = 56432343
-					order = 40
-					enabled = True
-					simplexCurve
-					{
-						key = 0 0 0 0
-						key = 0.6311918 0.4490898 1.432598 1.432598
-						key = 1 1 0 0
-					}
-				}
-				VoronoiCraters
-				{
-					colorOpacity = 0.7
-					DebugColorMapping = False
-					deformation = 250
-					jitter = 0.1
-					jitterHeight = 3
-					rFactor = 1
-					rOffset = 1
-					simplexFrequency = 120
-					simplexOctaves = 3
-					simplexPersistence = 0.5
-					simplexSeed = 3412312
-					voronoiDisplacement = 0
-					voronoiFrequency = 25
-					voronoiSeed = 4353453
-					order = 50
-					enabled = True
-					CraterCurve
-					{
-						key = -0.9982381 -0.7411783 -0.06500059 -0.06500059
-						key = -0.9332262 -0.7678316 -0.2176399 -0.2176399
-						key = -0.8990405 -0.7433339 -2.560626 -2.560626
-						key = -0.7445966 -0.8581167 0.4436148 0.4436148
-						key = -0.4499771 -0.1392395 5.289535 5.289535
-						key = -0.4015177 0.2551735 9.069458 -2.149609
-						key = -0.2297457 0.002857953 -0.4453675 -0.4453675
-						key = 0.2724952 0.00423781 -0.01884932 -0.01884932
-						key = 0.9998434 -0.004090764 0.01397126 0.01397126
-					}
-					JitterCurve
-					{
-						key = -1.000701 0.4278412 0.1577609 0.1577609
-						key = -0.7884969 0.09487452 -0.7739663 -0.7739663
-						key = -0.6091803 0.072019 0.123537 0.123537
-						key = -0.3930514 0.3903495 3.300831 3.300831
-						key = -0.3584836 0.8643304 0.07139917 0.07139917
-						key = -0.2988068 0.002564805 -0.01814346 -0.01814346
-						key = 0.9970253 0.003401639 0 0
-					}
-				}
+                {
+                    seed = 11182391
+                    deformity = 100
+                    octaves = 8
+                    persistence = 0.5
+                    frequency = 24
+                    enabled = true
+                    order = 20
+                }				
+                VertexSimplexHeight
+                {
+                    seed = 2488903
+                    deformity = 100
+                    octaves = 8
+                    persistence = 0.5
+                    frequency = 4
+                    enabled = true
+                    order = 30
+                }		
+                VertexHeightNoiseVertHeightCurve2
+                {
+                    deformity = 100
+                    ridgedAddFrequency = 32
+                    ridgedAddLacunarity = 2
+                    ridgedAddOctaves = 8
+                    ridgedAddSeed = 645434
+                    ridgedMode = Low
+                    ridgedSubFrequency = 32
+                    ridgedSubLacunarity = 2
+                    ridgedSubOctaves = 8
+                    ridgedSubSeed = 934272371
+                    simplexFrequency = 24
+                    simplexHeightEnd = 3500
+                    simplexHeightStart = 0
+                    simplexOctaves = 8
+                    simplexPersistence = 0.5
+                    simplexSeed = 56432343
+                    order = 40
+                    enabled = True
+                    simplexCurve
+                    {
+                        key = 0 0 0 0
+                        key = 0.6311918 0.4490898 1.432598 1.432598
+                        key = 1 1 0 0
+                    }
+                }
 				VertexColorMap
 				{
-					map = Mekhlin/Corvus/PluginData/Corvus_color.dds
+					map = Mekhlin/Corvus/PluginData/Corvus.dds
 					order = 60
 					enabled = True
 				}
