Update landClasses and fix indentation (4 spaces)

--- a/GameData/Mekhlin/Corvus/KopernicusConfigs/Corvus.cfg
+++ b/GameData/Mekhlin/Corvus/KopernicusConfigs/Corvus.cfg
@@ -1,48 +1,43 @@
 @Kopernicus:FOR[Corvus]
 {
-	Body
-	{
-		name = Corvus
-		cacheFile = Mekhlin/Cache/Corvus.bin
-		Template
-		{
-			name = Moho
-			removeAllPQSMods = True
-		}
-		Debug
-		{
-			exportMesh = True
-			update = True
-		}
-		Properties
-		{
-			description = A planet
-			displayName = Corvus
-			radius = 270000
-			geeASL = 0.25
-			rotates = True
-			tidallyLocked = True
-			//rotationPeriod
-			initialRotation = 37.524
-			albedo = 0.25
-			emissivity = 0.95
-			isHomeWorld = False
-			timewarpAltitudeLimits = 0 6000 9000 20000 50000 100000 200000 300000
-			
-			ScienceValues
-			{
-				landedDataValue = 30
-				//splashedDataValue
-				//flyingLowDataValue
-				//flyingHighDataValue
-				inSpaceLowDataValue = 24
-				inSpaceHighDataValue = 22
-				recoveryValue = 22
-				//flyingAltitudeThreshold
-				spaceAltitudeThreshold = 125000
-			}
-		}
-		Orbit
+    Body
+    {
+        name = Corvus
+        cacheFile = Mekhlin/Cache/Corvus.bin
+        Template
+        {
+            name = Moho
+            removeAllPQSMods = True
+        }
+        Debug
+        {
+            exportMesh = True
+            update = True
+        }
+        Properties
+        {
+            description = A planet
+            displayName = Corvus
+            radius = 270000
+            geeASL = 0.25
+            rotates = True
+            tidallyLocked = True
+            initialRotation = 37.524
+            albedo = 0.25
+            emissivity = 0.95
+            isHomeWorld = False
+            timewarpAltitudeLimits = 0 6000 9000 20000 50000 100000 200000 300000
+
+            ScienceValues
+            {
+                landedDataValue = 30
+                inSpaceLowDataValue = 24
+                inSpaceHighDataValue = 22
+                recoveryValue = 22
+                spaceAltitudeThreshold = 125000
+            }
+        }
+        Orbit
         {
             referenceBody = Sun
             inclination = -1.1
@@ -52,274 +47,279 @@
             longitudeOfAscendingNode = 0
             argumentOfPeriapsis = 0
             meanAnomalyAtEpoch = 3.14000010490417
-			meanAnomalyAtEpochD = 179.908753681645
+            meanAnomalyAtEpochD = 179.908753681645
             epoch = 0
             color = #cd853f
         }
-		ScaledVersion
-		{
-			type = Vacuum
-			fadeStart = 25000
-			fadeEnd = 30000
-			sphericalModel = False
-			deferMesh = False
-			Material
-			{
-				texture = Mekhlin/Corvus/PluginData/Corvus_color.dds
-				normals = Mekhlin/Corvus/PluginData/Corvus_normal.dds
-				opacity = 1
-				specColor = 0,0,0,1
-				shininess = 0
-			}
-		}
-		PQS
-		{
-			minLevel = 2
-			maxLevel = 8
-			minDetailDistance = 6
-			fadeStart = 30000
-			fadeEnd = 120000
-			deactivateAltitude = 140000
-			materialType = AtmosphericOptimized
-			allowFootprints = True
-			Material
-			{
-				saturation = 1
-				contrast = 1
-				tintColor = 1,1,1,0	
-				powerNear = 0.75
-				powerFar = 0.75
-				groundTexStart = 0
-				groundTexEnd = 2000
-				steepPower = 3.5
-				steepTexStart = 0
-				steepTexEnd = 100000
-				steepTex = CTTP/Textures/PluginData/cliff.dds
-				steepTexScale = 1,1
-				steepTexOffset = 0,0
-				steepBumpMap = CTTP/Textures/PluginData/cliff_normal.dds
-				steepBumpMapScale = 1,1
-				steepBumpMapOffset = 0,0
-				steepNearTiling = 275
-				steepTiling = 80
-				lowTex = CTTP/Textures/PluginData/gravel.dds
-				lowTexScale = 1,1
-				lowTexOffset = 0,0
-				lowBumpMap = CTTP/Textures/PluginData/gravel_normal.dds
-				lowBumpMapScale = 1,1
-				lowBumpMapOffset = 0,0
-				lowNearTiling = 15000
-				lowMultiFactor = 10
-				lowBumpNearTiling = 15000
-				lowBumpFarTiling = 30
-				midTex = CTTP/Textures/PluginData/gravel.dds
-				midTexScale = 1,1
-				midTexOffset = 0,0
-				midBumpMap = CTTP/Textures/PluginData/gravel_normal.dds
-				midBumpMapScale = 1,1
-				midBumpMapOffset = 0,0
-				midNearTiling = 15000
-				midMultiFactor = 10
-				midBumpNearTiling = 15000
-				midBumpFarTiling = 30
-				highTex = CTTP/Textures/PluginData/gravel.dds
-				highTexScale = 1,1
-				highTexOffset = 0,0
-				highBumpMap = CTTP/Textures/PluginData/gravel_normal.dds
-				highBumpMapScale = 1,1
-				highBumpMapOffset = 0,0
-				highNearTiling = 15000
-				highMultiFactor = 10
-				highBumpNearTiling = 15000
-				highBumpFarTiling = 30
-				lowStart = 0
-				lowEnd = 0.4
-				highStart = 0.6
-				highEnd = 1
-				globalDensity = 0
-				planetOpacity = 1
-			}
-			Mods
-			{	
-				VertexHeightMap
-				{
-					map = Mekhlin/Corvus/PluginData/Corvus_height.dds
-					offset = 0
-					deformity = 8000
-					scaleDeformityByRadius = False
-					order = 100
-					enabled = True
-				}
-				VertexColorMap
-				{
-					map = Mekhlin/Corvus/PluginData/Corvus_color.dds
-					order = 110
-					enabled = True
-				}
-				VertexHeightNoiseVertHeight
-				{
-					heightStart = 0.1
-					heightEnd = 1
-					noiseType = Perlin
-					deformity = 1500
-					frequency = 24
-					octaves = 8
-					lacunarity = 2
-					persistance = 0.6
-					seed = 12345
-					mode = Low
-					order = 120
-					index = 0
-					enabled = True
-				}
-				LandControl
-				{
-					altitudeBlend = 0
-					altitudeFrequency = 1
-					altitudeOctaves = 1
-					altitudePersistance = 1
-					altitudeSeed = 1
-					createColors = False
-					createScatter = True
-					heightMap = Mekhlin/Corvus/PluginData/Corvus_height.dds
-					latitudeBlend = 0
-					latitudeFrequency = 1
-					latitudeOctaves = 1
-					latitudePersistance = 1
-					latitudeSeed = 1
-					longitudeBlend = 0
-					longitudeFrequency = 1
-					longitudeOctaves = 1
-					longitudePersistance = 1
-					longitudeSeed = 1
-					useHeightMap = True
-					vHeightMax = 10000
-					order = 200
-					enabled = True
-					altitudeSimplex
-					{
-						frequency = 1
-						octaves = 1
-						persistence = 1
-					}
-					latitudeSimplex
-					{
-						frequency = 1
-						octaves = 1
-						persistence = 1
-					}
-					longitudeSimplex
-					{
-						frequency = 1
-						octaves = 1
-						persistence = 1
-					}
-					landClasses
-					{
-						Class
-						{
-							alterApparentHeight = 0
-							alterRealHeight = 0
-							color = 0,0,0,0
-							coverageBlend = 0
-							coverageFrequency = 1
-							coverageOctaves = 1
-							coveragePersistance = 1
-							coverageSeed = 123
-							name = Base
-							latDelta = 1
-							latitudeDouble = False
-							lonDelta = 1
-							minimumRealHeight = 0
-							noiseBlend = 0
-							noiseColor = 0,0,0,0
-							noiseFrequency = 1
-							noiseOctaves = 1
-							noisePersistance = 1
-							noiseSeed = 321
-							delete = False
-							altitudeRange
-							{
-								endEnd = 1
-								endStart = 1
-								startEnd = 0
-								startStart = 0
-							}
-							coverageSimplex
-							{
-								frequency = 1
-								octaves = 1
-								persistence = 1
-							}
-							latitudeRange
-							{
-								endEnd = 1
-								endStart = 1
-								startEnd = 0
-								startStart = 0
-							}
-							longitudeRange
-							{
-								endEnd = 2
-								endStart = 2
-								startEnd = -1
-								startStart = -1
-							}
-							noiseSimplex
-							{
-								frequency = 1
-								octaves = 1
-								persistence = 1
-							}
-							scatters
-							{
-								Scatter
-								{
-									density = 1
-									scatterName = sand_boulder
-								}
-							}
-						}
-					}
-					scatters
-					{
-						Scatter
-						{
-							name = sand_boulder
-							materialType = BumpedDiffuse
-							mesh = BUILTIN/boulder
-							seed = 12345
-							densityFactor = 1
-							maxCache = 512
-							maxCacheDelta = 32
-							maxLevelOffset = 0
-							maxScale = 4
-							maxScatter = 16
-							maxSpeed = 1000
-							minScale = 0.1
-							verticalOffset = -0.25
-							castShadows = True
-							recieveShadows = True
-							collide = True
-							delete = False
-							science = False
-							Material
-							{
-								color = RGBA(154, 125, 94, 255)
-								mainTex = CTTP/Textures/PluginData/sand.dds
-								mainTexScale = 1,1
-								mainTexOffset = 0,0
-								bumpMap = CTTP/Textures/PluginData/sand_normal.dds
-								bumpMapScale = 1,1
-								bumpMapOffset = 0,0
-							}
-							Experiment
-							{
-							}
-						}
-					}
-				}
-			}
-		}
-	}
+        ScaledVersion
+        {
+            type = Vacuum
+            fadeStart = 25000
+            fadeEnd = 30000
+            sphericalModel = False
+            deferMesh = False
+            Material
+            {
+                texture = Mekhlin/Corvus/PluginData/Corvus_color.dds
+                normals = Mekhlin/Corvus/PluginData/Corvus_normal.dds
+                opacity = 1
+                specColor = 0,0,0,1
+                shininess = 0
+            }
+        }
+        PQS
+        {
+            minLevel = 2
+            maxLevel = 8
+            minDetailDistance = 6
+            fadeStart = 30000
+            fadeEnd = 120000
+            deactivateAltitude = 140000
+            allowFootprints = True
+            Material
+            {
+                saturation = 1
+                contrast = 1
+                tintColor = 1,1,1,0	
+                powerNear = 0.75
+                powerFar = 0.75
+                groundTexStart = 0
+                groundTexEnd = 2000
+                steepPower = 3.5
+                steepTexStart = 0
+                steepTexEnd = 100000
+                steepTex = CTTP/Textures/PluginData/cliff.dds
+                steepTexScale = 1,1
+                steepTexOffset = 0,0
+                steepBumpMap = CTTP/Textures/PluginData/cliff_normal.dds
+                steepBumpMapScale = 1,1
+                steepBumpMapOffset = 0,0
+                steepNearTiling = 275
+                steepTiling = 80
+                lowTex = CTTP/Textures/PluginData/gravel.dds
+                lowTexScale = 1,1
+                lowTexOffset = 0,0
+                lowBumpMap = CTTP/Textures/PluginData/gravel_normal.dds
+                lowBumpMapScale = 1,1
+                lowBumpMapOffset = 0,0
+                lowNearTiling = 15000
+                lowMultiFactor = 10
+                lowBumpNearTiling = 15000
+                lowBumpFarTiling = 30
+                midTex = CTTP/Textures/PluginData/sand.dds
+                midTexScale = 1,1
+                midTexOffset = 0,0
+                midBumpMap = CTTP/Textures/PluginData/sand_normal.dds
+                midBumpMapScale = 1,1
+                midBumpMapOffset = 0,0
+                midNearTiling = 15000
+                midMultiFactor = 10
+                midBumpNearTiling = 15000
+                midBumpFarTiling = 30
+                highTex = CTTP/Textures/PluginData/sand.dds
+                highTexScale = 1,1
+                highTexOffset = 0,0
+                highBumpMap = CTTP/Textures/PluginData/sand_normal.dds
+                highBumpMapScale = 1,1
+                highBumpMapOffset = 0,0
+                highNearTiling = 15000
+                highMultiFactor = 10
+                highBumpNearTiling = 15000
+                highBumpFarTiling = 30
+                lowStart = 0
+                lowEnd = 0.4
+                highStart = 0.6
+                highEnd = 1
+                globalDensity = 0
+                planetOpacity = 1
+            }
+            Mods
+            {	
+                VertexHeightMap
+                {
+                    map = Mekhlin/Corvus/PluginData/Corvus_height.dds
+                    offset = 0
+                    deformity = 8000
+                    scaleDeformityByRadius = False
+                    order = 10
+                    enabled = True
+                }
+                VertexColorMap
+                {
+                    map = Mekhlin/Corvus/PluginData/Corvus_color.dds
+                    order = 20
+                    enabled = True
+                }
+                VertexHeightNoiseVertHeight
+                {
+                    heightStart = 0.1
+                    heightEnd = 1
+                    noiseType = Perlin
+                    deformity = 1500
+                    frequency = 24
+                    octaves = 8
+                    lacunarity = 2
+                    persistance = 0.6
+                    seed = 12345
+                    mode = Low
+                    order = 30
+                    index = 0
+                    enabled = True
+                }
+                LandControl
+                {
+                    altitudeBlend = 0
+                    altitudeFrequency = 1
+                    altitudeOctaves = 1
+                    altitudePersistance = 1
+                    altitudeSeed = 1
+                    createColors = False
+                    createScatter = True
+                    latitudeBlend = 0
+                    latitudeFrequency = 1
+                    latitudeOctaves = 1
+                    latitudePersistance = 1
+                    latitudeSeed = 1
+                    longitudeBlend = 0
+                    longitudeFrequency = 1
+                    longitudeOctaves = 1
+                    longitudePersistance = 1
+                    longitudeSeed = 1
+                    useHeightMap = False
+                    vHeightMax = 10000
+                    order = 40
+                    enabled = True
+                    altitudeSimplex
+                    {
+                    frequency = 1
+                    octaves = 1
+                    persistence = 1
+                    }
+                    latitudeSimplex
+                    {
+                    frequency = 1
+                    octaves = 1
+                    persistence = 1
+                    }
+                    longitudeSimplex
+                    {
+                    frequency = 1
+                    octaves = 1
+                    persistence = 1
+                    }
+                    landClasses
+                    {
+                        Class
+                        {
+                            alterApparentHeight = 0
+                            alterRealHeight = 0
+                            color = #64461d
+                            coverageBlend = 0
+                            coverageFrequency = 1
+                            coverageOctaves = 1
+                            coveragePersistance = 1
+                            coverageSeed = 1
+                            name = Base
+                            latDelta = 1
+                            latitudeDouble = False
+                            lonDelta = 1
+                            minimumRealHeight = 0
+                            noiseBlend = 0
+                            noiseColor = 0,0,0,0
+                            noiseFrequency = 1
+                            noiseOctaves = 1
+                            noisePersistance = 1
+                            noiseSeed = 1
+                            delete = False
+                            altitudeRange
+                            {
+                                endEnd = 1
+                                endStart = 1
+                                startEnd = 0
+                                startStart = 0
+                            }
+                            coverageSimplex
+                            {
+                                frequency = 1
+                                octaves = 1
+                                persistence = 1
+                            }
+                            latitudeDoubleRange
+                            {
+                                endEnd = 1
+                                endStart = 1
+                                startEnd = 0
+                                startStart = 0
+                            }
+                            latitudeRange
+                            {
+                                endEnd = 1
+                                endStart = 1
+                                startEnd = 0
+                                startStart = 0
+                            }
+                            longitudeRange
+                            {
+                                endEnd = 2
+                                endStart = 2
+                                startEnd = -1
+                                startStart = -1
+                            }
+                            noiseSimplex
+                            {
+                                frequency = 1
+                                octaves = 1
+                                persistence = 1
+                            }
+                            scatters
+                            {
+                                Scatter
+                                {
+                                    density = 0.8
+                                    scatterName = sand_boulder
+                                }
+                            }
+                        }
+                    }
+                    scatters
+                    {
+                        Scatter
+                        {
+                            name = sand_boulder
+                            materialType = BumpedDiffuse
+                            mesh = BUILTIN/boulder
+                            seed = 12345
+                            densityFactor = 1
+                            maxCache = 512
+                            maxCacheDelta = 32
+                            maxLevelOffset = 0
+                            maxScale = 4
+                            maxScatter = 16
+                            maxSpeed = 1000
+                            minScale = 0.1
+                            verticalOffset = -0.25
+                            castShadows = True
+                            recieveShadows = True
+                            collide = True
+                            delete = False
+                            science = False
+                            Material
+                            {
+                                color = RGBA(154, 125, 94, 255)
+                                mainTex = CTTP/Textures/PluginData/sand.dds
+                                mainTexScale = 1,1
+                                mainTexOffset = 0,0
+                                bumpMap = CTTP/Textures/PluginData/sand_normal.dds
+                                bumpMapScale = 1,1
+                                bumpMapOffset = 0,0
+                            }
+                            Experiment
+                            {
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
