--- a/GameData/Mekhlin/Corvus/KopernicusConfigs/Moons/Flint.cfg
+++ b/GameData/Mekhlin/Corvus/KopernicusConfigs/Moons/Flint.cfg
@@ -19,14 +19,16 @@
 		Orbit
         {
             referenceBody = Corvus
-            color = RGBA(205, 205, 205, 255)
-            semiMajorAxis = 17000000
-            inclination = -6.15
-			eccentricity = 0.26
-			longitudeOfAscendingNode = 260
-            argumentOfPeriapsis = 50
-			meanAnomalyAtEpoch = 0
-            epoch = 213
+            color = #585858
+            semiMajorAxis = 23000000
+            inclination = 5.13
+            eccentricity = 0.550000011920929
+			semiMajorAxis = 31500000
+			longitudeOfAscendingNode = 80
+			argumentOfPeriapsis = 10
+			meanAnomalyAtEpoch = 0.899999976158142
+			meanAnomalyAtEpochD = 51.5662001957363
+            epoch = 0
         }
 
 		Properties
@@ -67,8 +69,8 @@
             
 			Material
 			{
-				texture = Mekhlin/Corvus/PluginData/Flint_color.dds
-				normals = Mekhlin/Corvus/PluginData/Flint_normal.dds
+				texture = Mekhlin/Corvus/PluginData/Moon_color.dds
+				normals = Mekhlin/Corvus/PluginData/Moon_normal.dds
 				shininess = 0.0
 				specular = 0,0,0,1
 			}
@@ -138,7 +140,7 @@
 			{
 				VertexColorMap
 				{
-					map = Mekhlin/Corvus/PluginData/Flint_color.dds
+					map = Mekhlin/Corvus/PluginData/Moon_color.dds
 					order = 9999993
 					enabled = true
 				}
