--- a/GameData/Mekhlin/Corvus/KopernicusConfigs/Corvus.cfg
+++ b/GameData/Mekhlin/Corvus/KopernicusConfigs/Corvus.cfg
@@ -26,7 +26,8 @@
             albedo = 0.25
             emissivity = 0.95
             isHomeWorld = False
-            timewarpAltitudeLimits = 0 6000 9000 20000 50000 100000 200000 300000
+            //timewarpAltitudeLimits = 0 6000 9000 20000 50000 100000 200000 300000
+            timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
 
             ScienceValues
             {
@@ -321,5 +322,74 @@
                 }
             }
         }
+        
+        Atmosphere
+		{
+			enabled = True
+			oxygen = True
+			staticDensityASL = 1.22497705725583
+			adiabaticIndex = 1.39999997615814
+			atmosphereDepth = 55000
+			gasMassLapseRate = 8.33518264702189
+			atmosphereMolarMass = 0.0289644002914429
+			pressureCurveIsNormalized = False
+			staticPressureASL = 101.324996948242
+			temperatureCurveIsNormalized = False
+			temperatureLapseRate = 0.0041
+			temperatureSeaLevel = 287
+			ambientColor = 0.243137255,0.250980407,0.254901975,1
+			lightColor = 0.649999976,0.569999993,0.474999994,0.5
+			addAFG = True
+			pressureCurve
+			{
+				key = 0 101.325 0 -0.01501631
+				key = 1241.025 84.02916 -0.01289846 -0.01289826
+				key = 2439.593 69.68138 -0.01107876 -0.01107859
+				key = 3597.11 57.78001 -0.009515483 -0.009515338
+				key = 45000 0 0 0
+			}
+            
+            pressureCurve
+			{
+				key = 0 101.325 0 -0.01501631
+				key = 1241.025 84.02916 -0.01289846 -0.01289826
+				key = 2439.593 69.68138 -0.01107876 -0.01107859
+				key = 3597.11 57.78001 -0.009515483 -0.009515338
+				key = 4714.942 47.90862 -0.00817254 -0.008172415
+				key = 5794.409 39.72148 -0.00701892 -0.007018813
+				key = 6836.791 32.93169 -0.006027969 -0.006027877
+				key = 7843.328 27.30109 -0.005176778 -0.0051767
+				key = 8815.22 22.63206 -0.004445662 -0.004445578
+				key = 10786.42 15.3684 -0.003016528 -0.00301646
+				key = 12101.4 11.87313 -0.002329273 -0.00232922
+				key = 13417.05 9.172798 -0.001798594 -0.001798554
+				key = 16678.47 4.842261 -0.0009448537 -0.0009448319
+				key = 21143.1 2.050097 -0.0003894095 -0.0003894005
+				key = 26977.92 0.6905929 -0.0001252565 -0.0001252534
+				key = 33593.82 0.2201734 -3.626878E-05 -3.626788E-05
+				key = 42081.87 0.05768469 -9.063159E-06 -9.062975E-06
+				key = 49312.13 0.01753794 -3.029397E-06 -3.029335E-06
+				key = 55000 0 0 0
+			}
+			temperatureCurve
+			{
+				key = 0 288.15 0 -0.008125
+				key = 8815.22 216.65 -0.008096968 0
+				key = 16050.39 216.65 0 0.001242164
+				key = 25729.23 228.65 0.001237475 0.003464929
+				key = 37879.44 270.65 0.00344855 0
+				key = 41129.24 270.65 0 -0.003444189
+				key = 55000 186.946 0 0
+			}
+			temperatureSunMultCurve
+			{
+				key = 0 1 0 0
+				key = 8815.22 0.3 -5.91316E-05 -5.91316E-05
+				key = 16050.39 0 0 0
+				key = 25729.23 0 0 0
+				key = 37879.44 0.2 0 0
+				key = 55000 1.2 0 0
+			}
+		}
     }
 }
